# chainlit-ollama

./: .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
data/prompts/: summarize.yml
data/templates/: CSS Selector.md  Chain of Draft.md  Chain of Thought Reasoning.jinja  Code Doc.md  Fact Check.md  Optimize Prompt.md  Programming Task.jinja  Prompt Generation.jinja  RAG Extraction.md  RAG Q&A.md  Rewriting.md  Summarize Article.jinja  Summarize Article.md  Summarize Content.jinja  Tree of Thought.md  Tree of Thoughts.jinja  Writing Suggestion.jinja  prompt optimization.md  summarize news article.md  summary.md
src/: agent_helper.py  app.py  app_helper.py  config.py  llm_service.py  llm_tools.py  python_exec.py  sentence.py  template_utils.py  text_utils.py
src/mcp/: mcp_prompts.py
tests/: test_agent_helper.py  test_llm_service.py  test_template_utils.py
