[project]
name = "chainlit-ollama"
version = "0.0.0"
dependencies = ["chainlit", "ollama", "tiktoken", "toml"]

[project.urls]
homepage = "https://github.com/kenual/chainlit-ollama"
repository = "https://github.com/kenual/chainlit-ollama"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
chainlit-app = "app:main"