[project]
name = "chainlit-ollama"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit", 
    "litellm", "async_generator", 
    "tiktoken", 
    "toml", 
    "Jinja2"
]

[project.urls]
homepage = "https://github.com/kenual/chainlit-ollama"
repository = "https://github.com/kenual/chainlit-ollama"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
chainlit-app = "app:main"