[project]
name = "chainlit-ollama"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit",
    "any-llm-sdk[ollama,cohere]",
    "tiktoken", 
    "toml", 
    "Jinja2",
    "PyYAML"
]

[project.urls]
homepage = "https://github.com/kenual/chainlit-ollama"
repository = "https://github.com/kenual/chainlit-ollama"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
chainlit-app = "app:main"